添加接口，提交文件名字来查询
